--- a/desafios/modulo 2/d012/style.css
+++ b/desafios/modulo 2/d012/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'Passion One';
+    src: url(fontes/Passion_One/PassionOne-Regular.ttf) format(ttf);
+
+    font-family: 'sriracha';
+    src: url(fontes/Sriracha/Sriracha-Regular.ttf) format(ttf);
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +16,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
@@ -19,6 +28,8 @@ header {
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: 'Passion One';
+    font-size: 10vw;
 }
 
 header > p{
@@ -40,6 +51,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: 'sriracha';
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -54,7 +67,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.205);
 }
 
